--- a/input/_IndexHeader.cshtml
+++ b/input/_IndexHeader.cshtml
@@ -8,7 +8,7 @@
             journal and well... write code.
         </p>
         <p>
-            You must have stumbled upon this website for a reason. If wanted to get in touch with me, you can do so <a href="/contact">here</a>. 
+            You must have stumbled upon this website for a reason. If you wanted to get in touch with me, you can do so <a href="/contact">here</a>. 
             If you were looking for one of my websites, I've listed them below. 
         </p>
         <ul>
