--- a/input/_IndexHeader.cshtml
+++ b/input/_IndexHeader.cshtml
@@ -3,7 +3,7 @@
     <hr class="small">
     <div class="subheading" style="text-align: left;">
         <p>
-            Welcome to my personal home on the web. I am a .NET Software Developer currently working in the DFW area. When I'm not writing code, I like to spend time with 
+            Welcome to my personal home on the web. I am a .NET Software Developer. When I'm not writing code, I like to spend time with 
             my family. I've been blessed with a beautiful wife and two kids. In my spare time I like to read books, listen to rock music, play video games, write on my 
             journal and well... write code.
         </p>
