Added back footer to homepage, plus some styling updates on footer. Added new link to gaming blog. Added new custom favicon. Updated contact page.

--- a/input/_IndexHeader.cshtml
+++ b/input/_IndexHeader.cshtml
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="https://ateas.dinobansigan.com">Above the Earth and Seas</a> - a photo-blog focused on photos of the sky.</li>
             <li><a href="https://devblog.dinobansigan.com/">Attach to Process</a> - a blog where I share my thoughts and notes on software development.</li>
+            <li><a href="https://gaming.dinobansigan.com/">Dad vs Videogames</a> - a blog/journal where a dad <i>(that's me)</i> talks about the video games he plays.</li>
             <li><a href="https://journal.dinobansigan.com/">Dino's Journal</a> - online journal where I talk about other topics not entirely related to software development.</li>
             <li><a href="https://publish.obsidian.md/dinobansigan/Start+Here">Dino's Notes</a> - my attempt at a digital garden/personal knowledge-base.</li>
             <li><a href="https://nowlisteningto.com">Now listening to...</a> - a music blog where I share songs that I'm listening to at the moment.</li>
