--- a/input/_Layout.cshtml
+++ b/input/_Layout.cshtml
@@ -19,8 +19,11 @@
     @if (Context.String(BlogKeys.AtomPath) != null) {
     <link type="application/atom+xml" rel="alternate" title="@Context.String(BlogKeys.Title)" href="@Context.GetLink(Context.String(BlogKeys.AtomPath))" />
         }
-    <link rel="shortcut icon" href="@Context.GetLink("/favicon.ico")" type="image/x-icon">
-    <link rel="icon" href="@Context.GetLink("/favicon.ico")" type="image/x-icon">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/site.webmanifest">
 
     <link href="@Context.GetLink("/assets/css/bootstrap.min.css")" rel="stylesheet" />
     <link href="@Context.GetLink("/assets/css/highlight.css")" rel="stylesheet">
@@ -108,14 +111,9 @@
         </div>
     </div>
 
-@if (PageTitle != "Dino Bansigan")
-{
-    <hr />
-    <!-- Footer -->
     <footer>
         @Html.Partial("_Footer")
     </footer>
-}
 
     <script src="@Context.GetLink("/assets/js/jquery.min.js")"></script>
     <script src="@Context.GetLink("/assets/js/bootstrap.min.js")"></script>
